ADD : Forms Add Aliment
A forms get data aliment and display data

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".FormsAddAliments"
+            android:exported="false" />
+        <activity
             android:name=".HowToConnect"
             android:exported="true" />
         <activity
