--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,6 +1,9 @@
 bson==0.5.10
+cachelib==0.4.1
 click==8.0.3
+dnspython==1.16.0
 Flask==2.0.2
+Flask-Session==0.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
