--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,13 +1,35 @@
+Babel==2.9.1
+bcrypt==3.2.0
+blinker==1.4
 bson==0.5.10
 cachelib==0.4.1
+cffi==1.15.0
 click==8.0.3
+colorama==0.4.4
 dnspython==1.16.0
+email-validator==1.1.3
 Flask==2.0.2
+Flask-BabelEx==0.9.4
+Flask-Bcrypt==0.7.1
+Flask-JWT-Extended==4.3.1
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==3.0.0
+Flask-Security-Too==4.1.2
 Flask-Session==0.4.0
+Flask-WTF==0.15.1
+idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
+passlib==1.7.4
+pycparser==2.20
+PyJWT==2.3.0
 pymongo==3.12.0
 python-dateutil==2.8.2
+pytz==2021.3
 six==1.16.0
+speaklater==1.3
 Werkzeug==2.0.2
+WTForms==2.3.3
