Update: Git action for unittest
because of incomplete on last commit

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -46,5 +46,8 @@ jobs:
           cd flask
           flask run &
           
-      - name: Run tests with Unitests
-        run: python tests.py
+      - name: Python Unit Test
+        uses: onichandame/python-test-action@6a1d618300de7ea0b753e50819e093a7e5a5f60b
+        with:
+          test_dir: flask
+          pattern: tests.py
