Update: GitAction unittests
test to run unittest via the file

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -47,7 +47,4 @@ jobs:
           flask run &
           
       - name: Python Unit Test
-        uses: onichandame/python-test-action@0.0.0
-        with:
-          test_dir: flask
-          pattern: tests.py
+        run: python -m unittest discover tests
