Update: GitAction unittest
changed the path to tests file

--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -47,4 +47,6 @@ jobs:
           flask run &
           
       - name: Python Unit Test
-        run: python -m unittest discover tests
+        run: |
+          cd flask
+          python -m unittest discover tests
