--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ForgotPassword"
+            android:name=".CheckCodeMail"
+            android:exported="false" />
+        <activity
+            android:name=".CheckAndSendEmail"
             android:exported="false" />
         <activity
             android:name=".FormsAddAliments"
