--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -1,3 +1,4 @@
+astroid==2.8.4
 Babel==2.9.1
 bcrypt==3.2.0
 blinker==1.4
@@ -13,23 +14,31 @@ Flask-BabelEx==0.9.4
 Flask-Bcrypt==0.7.1
 Flask-JWT-Extended==4.3.1
 Flask-Login==0.5.0
-Flask-Mail==0.9.1
+Flask-Mail==0.9.0
 Flask-Principal==0.4.0
 Flask-Security==3.0.0
 Flask-Security-Too==4.1.2
 Flask-Session==0.4.0
 Flask-WTF==0.15.1
 idna==3.3
+isort==5.10.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
+lazy-object-proxy==1.6.0
 MarkupSafe==2.0.1
+mccabe==0.6.1
 passlib==1.7.4
+platformdirs==2.4.0
 pycparser==2.20
 PyJWT==2.3.0
+pylint==2.11.1
 pymongo==3.12.0
 python-dateutil==2.8.2
+python-dotenv==0.19.1
 pytz==2021.3
 six==1.16.0
 speaklater==1.3
+toml==0.10.2
 Werkzeug==2.0.2
+wrapt==1.13.3
 WTForms==2.3.3
