--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:name=".MainActivity"
             android:exported="true" />
         <activity
+            android:name=".SignUp"
+            android:exported="true" />
+        <activity
             android:name=".Login"
             android:exported="true">
             <intent-filter>
