--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -49,4 +49,4 @@ jobs:
       - name: Python Unit Test
         run: |
           cd flask
-          python -m unittest discover tests
+          python -mv unittest discover tests
