ADD : ADD feature updata password and hash in Database
* Verification of the quality of the added password.
* Verification of the two similar passwords
* The hash of the password
* Change in the DB with the api

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".UpdatePassword"
+            android:exported="false" />
+        <activity
             android:name=".SignUp"
             android:exported="true" />
         <activity
