--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.smartfridge.android">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -8,7 +9,8 @@
         android:allowBackup="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
         <activity
             android:name=".UpdatePassword"
             android:exported="false" />
@@ -30,15 +32,15 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" >
+        </activity>
+        <activity
+            android:name=".Login"
+            android:exported="true">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
-        </activity>
-        <activity
-            android:name=".Login"
-            android:exported="true">
         </activity>
     </application>
 
