--- a/flask/requirements.txt
+++ b/flask/requirements.txt
@@ -7,6 +7,7 @@ cachelib==0.4.1
 cffi==1.15.0
 click==8.0.3
 colorama==0.4.4
+cryptography==36.0.0
 dnspython==1.16.0
 email-validator==1.1.3
 Flask==2.0.2
@@ -33,6 +34,7 @@ pycparser==2.20
 PyJWT==2.3.0
 pylint==2.11.1
 pymongo==3.12.0
+pyOpenSSL==21.0.0
 python-dateutil==2.8.2
 python-dotenv==0.19.1
 pytz==2021.3
