--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -37,7 +37,13 @@ jobs:
           cd flask
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+
+      - name: create .env and JWT_SCRET_KEY
+        run: |
+          cd flask
+          touch .env
+          echo "JWT_SECRET_KEY = 'JXQD9iTYBhTOtFUfQvQwe8v4EQR1tSlKZ8f3YmdMkLE='" > .env
+
       - name: Launch flask developpment server
         run: |
           cd flask
