--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-feature android:name="android.hardware.camera.any" />
     <application
         android:icon="@mipmap/ic_launcher_round"
+        android:label="@string/app_name"
         android:allowBackup="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -43,7 +44,6 @@
         <activity
             android:name=".SplashScreen"
             android:exported="true"
-            android:label="SplashScreen"
             android:theme="@style/Theme.Transparent">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
