--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -15,8 +15,9 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  name: Test - Backend tests
   # This workflow contains a single job called "build"
-  build:
+  test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -42,7 +43,7 @@ jobs:
         run: |
           cd flask
           touch .env
-          echo "JWT_SECRET_KEY = 'JXQD9iTYBhTOtFUfQvQwe8v4EQR1tSlKZ8f3YmdMkLE='" > .env
+          echo "JWT_SECRET_KEY = 'sdofuhgpohn,pofjmijdsmofitporijdpjdfùpogjdi54686'" > .env
 
       - name: Launch flask developpment server
         run: |
@@ -53,3 +54,42 @@ jobs:
         run: |
           cd flask
           python -m unittest discover tests
+
+  docker:
+    name: Publish - Docker Hub
+    runs-on: ubuntu-latest
+    needs: [test]
+    steps:
+      - uses: actions/checkout@v1
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11.0.4
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Build NginX docker image
+        run: docker build ./nginx -t ${{ secrets.DOCKER_REPO_NGINX }}
+      - name: Publish NginX docker image
+        run: docker push ${{ secrets.DOCKER_REPO_NGINX }}
+
+      - name: Build MongoDB docker image
+        run: docker build ./mongodb -t ${{ secrets.DOCKER_REPO_MONGODB }}
+      - name: Publish MongoDB docker image
+        run: docker push ${{ secrets.DOCKER_REPO_MONGODB }}
+
+      - name: Build Flask docker image
+        run: docker build ./flask -t ${{ secrets.DOCKER_REPO_FLASK }}
+      - name: Publish Flask docker image
+        run: docker push ${{ secrets.DOCKER_REPO_FLASK }}
+
+  redeploy:
+    name: Redeploy webhook call
+    runs-on: ubuntu-latest
+    needs: [docker]
+    steps:
+      - name: Deploy docker container webhook
+        uses: joelwmale/webhook-action@master
+        env:
+          WEBHOOK_URL: ${{ secrets.DEPLOY_WEBHOOK_URL  }}
+          data: "{ 'myField': 'myFieldValue'}"
