--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -20,6 +20,10 @@ jobs:
     name: Test - Backend tests
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      JWT_SECRET_KEY: 'sdofuhgpohn,pofjmijdsmofitporijdpjdfùpogjdi54686'
+      MONGO_DB_PASSWORD: ""
+      MONGO_DB_HOST: 'mongodb://127.0.0.1:27017'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
