--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -75,6 +75,6 @@ http {
     # on détéermine la taille des différents buffers pour éviter l'exploitation d'un buffer overflow
     client_body_buffer_size 1K;
     client_header_buffer_size 1k;
-    client_max_body_size 1k;
+    client_max_body_size 8M;
     large_client_header_buffers 2 1k;
 }
