--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -24,6 +24,12 @@ jobs:
       JWT_SECRET_KEY: 'JXQD9iTYBhTOtFUfQvQwe8v4EQR1tSlKZ8f3YmdMkLE='
       MONGO_DB_PASSWORD: ""
       MONGO_DB_HOST: 'mongodb://127.0.0.1:27017'
+      APP_NAME: 'MyFlaskApp'
+      MAIL_SERVER: 'test'
+      MAIL_PORT: 9000
+      MAIL_USE_TLS: True
+      MAIL_USERNAME: 'test'
+      MAIL_PASSWORD: 'test'
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
